tests/parser/invalid/for-do.inox
Module InvalidForDo

Main() :
    Var
        Total := 0
    ;

    for I in 1..10 do
        Total := Total + I
    ;
;
